# SmartPaste

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: 2  Cargo.toml  config.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: OCR.rs  README.md  app_setup.rs  clipboard.rs  config.rs  db.rs  lib.rs  main.rs  test_db.rs  utils.rs
src-tauri/src/db/: cleanup.rs  core.rs  extended.rs  folders.rs  mod.rs  privacy.rs  search.rs  sync.rs
src-tauri/src/test_unit/: test_app_setup.rs  test_config.rs  test_db_adv.rs  test_db_base.rs  test_db_cleanup.rs  test_db_extend.rs  test_db_folder.rs  test_db_private.rs  test_db_sync.rs  test_ocr.rs  test_performance.rs  test_private.rs  test_utils.rs
src/components/: ClipboardApp.vue  DesktopPet.vue  Global.vue  Menu.vue  Preferences.vue  Settings.vue  aiAgent.vue  live2dtest.vue
src/composables/: ClipboardApp.js  DesktopPet.js  Menu.js  Preferences.js  aiAgent.js
src/router/: index.js
src/services/: api.js
src/stores/: security.js  settings.js
src/utils/: actions.js  animations.js  live2dManager.js
开发文档/: 代码编写规范.md  团队会议纪要.md  用户操作手册.md  软件测试报告.md  需求原型与交互设计文档.md
