[package]
name = "desktop-pet"
version = "0.1.0"
description = "A Desktop Pet Application"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }  
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-clipboard-manager = "2"
image = { version = "0.25.1", features = ["png"] }
clipboard-files = "0.1.1"
tempfile = "3.3"  
arboard = "3.2"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-autostart = "2.0"anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uni-ocr = {git = "https://github.com/mediar-ai/uniocr.git"}

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
