[package]
name = "desktop-pet"
version = "0.1.0"
description = "A Desktop Pet Application"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon",] }  
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-clipboard-manager = "2"
image = { version = "0.25.1", features = ["png"] }
clipboard-files = "0.1.1"
tempfile = "3.3"  
arboard = "3.2"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-autostart = "2.0"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uni-ocr = {git = "https://github.com/mediar-ai/uniocr.git"}
lazy_static = "1.4.0" 
base64 = "0.22"
clipboard-rs="0.3"
tauri-plugin-dialog = "2"
zip = "0.6"
tauri-plugin-notification = "2.3.3"
rdev = "0.5"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2.0.0"

[dependencies.windows]
version = "0.58" 
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",               
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Graphics_Gdi",           
    "Win32_System_Com",             
    "Win32_Storage_FileSystem",     
]
